# quantum-uni

./: README.md  pyproject.toml
lab2/: lab2.ipynb
lab3/: lab3.ipynb
lab4/: lab4.ipynb
lab5/: Lab_5_PG_New.ipynb  lab5.ipynb
lab6/: Lab6_Q221_WM.ipynb  lab6.ipynb
project1/: project1.ipynb
project2/: project2.ipynb
project3/: project3.ipynb
project4/: project4.ipynb
