[project]
name = "quantum-uni"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Nikita Makarevich", email = "nikita_makarevich@yahoo.com" },
]
dependencies = [
    "qiskit>=2.2.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "qiskit-aer>=0.17.2",
    "pylatexenc>=2.10",
    "seaborn>=0.13.2",
    "qiskit-ibm-runtime>=0.45.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
